# 14th_homework

./: .coverage  .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16404  16421  16422  16428  16430  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  3502  3503  (+3 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_e2e_routes_auth.py  test_unit_repository_contact.py  test_unit_repository_users.py
